# sourcery

./: .envrc  .gitignore  Cargo.toml  Makefile  run_files.py
.zed/: settings.json
crates/sourcery-analyzer/: Cargo.toml
crates/sourcery-analyzer/src/: diff.rs  git_handler.rs  halstead_subprocess.rs  language.rs  lib.rs  main.rs  processor.rs  progress.rs
crates/sourcery-analyzer/tests/: git_integration.rs
crates/sourcery-db/: Cargo.toml  files.txt
crates/sourcery-db/scripts/: compare_files.py  get_current_files_for_last_version_of_first_codebase.sh  get_files_from_version.sh  get_first_codebase.sh  get_last_verion_of_codebase.sh  get_latest_version.sh  get_version_by_commit.sh
crates/sourcery-db/src/: db.rs  main.rs
crates/sourcery-lsp-client/: Cargo.toml
crates/sourcery-lsp-client/src/: lib.rs  main.rs
crates/sourcery-web/: Cargo.toml  test.sh
crates/sourcery-web/src/: main.rs
docs/: dataplan.md
frontend/: AGENTS.md  bun.lockb  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.svelte
frontend/src/lib/: Button.svelte  CodeBase.svelte  DiffGraph.svelte  Layout.svelte  Table.svelte  TableElement.svelte  TableHeader.svelte  router.ts
gohalstead/: expected_output.json  fixture.txt  go.mod  gohalstead.go  gohalstead_test.go
migrations/: 20260401000000_init.sql  20260505184000_remove_directories_add_changes.sql  20260505190500_create_diffs_and_link_changes.sql  20260505193000_store_diff_commit_hashes.sql  20260507225400_add_programming_language_to_codebases.sql  20260528120000_add_file_changes.sql  20260528130000_add_file_states.sql  20260531130500_add_patch_blob_to_diffs.sql  20260602120000_add_trigram_version_search.sql
ocamlhalstead/: dune-project  fixture.txt  test_input.txt
ocamlhalstead/lib/: dune
ocamlhalstead/test/: dune  expected_output.json
react-frontend/: .cta.json  bun.lockb  package.json  vite.config.ts
react-frontend/src/: routeTree.gen.ts
react-frontend/src/components/: language-table.tsx  layout.tsx  not-found.tsx
react-frontend/src/components/ui/: button.tsx  table.tsx
react-frontend/src/lib/: models.ts
react-frontend/src/routes/: __root.tsx  codebase.$id.diff.tsx  codebase.$id.stats.tsx  codebase.$id.tsx  codebase.$id.version.$versionId.tsx  codebase.tsx  diff-graph.tsx  index.tsx
src/: db.rs  diff.rs  git_handler.rs  language.rs  lib.rs  main.rs  processor.rs
tests/: git_integration.rs  setup_test_repo.sh
