[package]
name = "sourcery"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
dotenvy = "0.15.7"
git2 = "0.20.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "migrate", "uuid", "chrono" ] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
walkdir = "2.5.0"
bytecount = "0.6.9"
tree-sitter = "0.26.8"
tree-sitter-python = "0.25.0"
regex = "1.12.3"
