[package]
name = "sourcery"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
dotenvy = "0.15.7"
git2 = { version = "0.20.4", default-features = false, features = ["https"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8", default-features = false, features = [ "runtime-tokio", "postgres", "migrate", "uuid", "chrono", "json", "derive", "macros" ] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
tree-sitter = "0.26.8"
tree-sitter-python = "0.25.0"
regex = "1.12.3"
tree-sitter-ocaml = "0.24.2"
tree-sitter-go = "0.25.0"

[profile.dev-fast]
inherits = "dev"
debug = 0
split-debuginfo = "off"
incremental = true
codegen-units = 256
opt-level = 0

[profile.dev-fast.package."*"]
debug = 0

[profile.dev-fast.build-override]
debug = 0
opt-level = 0
codegen-units = 256
