[package]
name = "sourcery-lsp-client"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "test"
path = "bin/test.rs"

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["fs", "io-std", "io-util", "process", "time"] }
tracing.workspace = true
tracing-subscriber.workspace = true
ecow = "0.2.6"
async-lsp = "0.2.4"
tokio-util = { version = "0.7.16", features = ["compat"] }
tower = "0.5.2"
